Added applet to blocklyduino webapp

--- a/blockly/apps/blocklyduino/index.html
+++ b/blockly/apps/blocklyduino/index.html
@@ -6,7 +6,7 @@
   <script type="text/javascript" src="Blob.js"></script>
   <script type="text/javascript" src="FileSaver.min.js"></script>
   <script type="text/javascript" src="blockly_helper.js"></script>
-  <script type="text/javascript" src="../loadsketch/launchbatch.js"></script>
+  <script type="text/javascript" src="../loadsketch/ArduAplet.js"></script>
   <script>
   // Whitelist of blocks to keep.
   /*var newLanguage = {}
@@ -270,9 +270,8 @@ function init(blockly) {
             <td class="tabmin">&nbsp;</td>
             <td id="tab_xml" class="taboff" onclick="tabClick(this.id)">XML</td>
             <td class="tabmax">
+              <applet code=ArduinoAppletPackage.ArduinoApplet.class archive="../loadsketch/ArduinoApplet.jar" name="ArduApplet" id ="ArduApplet" width="500" height="75"> </applet>
               <button onclick="discard()">Discard</button>
-              <button onclick="launchbatch()">Load to Arduino</button>
-              <applet code="../loadsketch/ArduinoApplet.class" width="150px" height="50px"> </applet>
               <button onclick="save()">Save XML</button>
               <button id="fakeload">Load XML</button>
               <input type="file" id="load" style="display: none;"/>
