--- a/blockly/apps/blocklyduino/frame.html
+++ b/blockly/apps/blocklyduino/frame.html
@@ -21,6 +21,8 @@
   <script type="text/javascript" src="../../language/common/procedures.js"></script>
   <!-- define blocks -->
   <script type="text/javascript" src="../../generators/arduino/base.js"></script>
+  <!-- BTW Blocks -->
+  <script type="text/javascript" src="../../generators/arduino/btw.js"></script>
   <!-- custom block -->
   <script type="text/javascript" src="../../generators/arduino/custom.js"></script>
   
@@ -46,22 +48,17 @@
           'inout_digital_write', 'inout_digital_read',
           'inout_analog_write', 'inout_analog_read',
           'serial_print', 'inout_buildin_led',
-          //servo
-          'servo_move', 'servo_read_degrees',
 		  //control
           'base_delay', 'controls_if', 'controls_if_if', 'controls_if_elseif', 'controls_if_else', 'controls_for',
           //'controls_whileUntil', 'controls_flow_statements',
           //math
           'base_map','math_number','math_arithmetic',//'math_modulo',
-          //text
-          'text', //'text_join','text_create_join_container','text_create_join_item',
           //logic
           'logic_compare', 'logic_operation', 'logic_negate', 'logic_null',//'logic_boolean',
           //variable
           'variables_get','variables_set', 'variables_declare',
-          //procedure
-          'procedures_defnoreturn', 'procedures_defreturn', 'procedures_callnoreturn', 'procedures_callreturn', 'procedures_mutatorcontainer', 'procedures_mutatorarg',
-          'procedures_ifreturn',
+		  //BTW
+		  'landing_gear_up','landing_gear_down',
           //custom
           //'custom_read','custom_write',
           ];
