--- a/blockly/apps/blocklyduino/frame.html
+++ b/blockly/apps/blocklyduino/frame.html
@@ -48,7 +48,7 @@
           'inout_digital_write', 'inout_digital_read',
           'inout_analog_write', 'inout_analog_read',
           'serial_print', 'inout_buildin_led',
-		  //control
+          //control
           'base_delay', 'controls_if', 'controls_if_if', 'controls_if_elseif', 'controls_if_else', 'controls_for',
           //'controls_whileUntil', 'controls_flow_statements',
           //math
@@ -57,8 +57,9 @@
           'logic_compare', 'logic_operation', 'logic_negate', 'logic_null',//'logic_boolean',
           //variable
           'variables_get','variables_set', 'variables_declare',
-		  //BTW
-		  'landing_gear_up','landing_gear_down',
+          //BTW
+          'landing_gear_up','landing_gear_down',
+          'rudder_left','rudder_right', 'rudder_set_position'
           //custom
           //'custom_read','custom_write',
           ];
