Added Nav lights and buttons blocks

--- a/blockly/apps/blocklyduino/frame.html
+++ b/blockly/apps/blocklyduino/frame.html
@@ -59,9 +59,8 @@
           'variables_get','variables_set', 'variables_declare',
           //BTW
           'landing_gear_up','landing_gear_down',
-          'rudder_left','rudder_right', 'rudder_set_position'
-          //custom
-          //'custom_read','custom_write',
+          'rudder_left','rudder_right', 'rudder_set_position',
+          'navigation_lights', 'read_button',
           ];
       for (var x = 0; x < keepers.length; x++) {
         newLanguage[keepers[x]] = Blockly.Language[keepers[x]];
