--- a/blockly/apps/blocklyduino/frame.html
+++ b/blockly/apps/blocklyduino/frame.html
@@ -50,7 +50,7 @@
           'serial_print', 'inout_buildin_led',
           //control
           'base_delay', 'controls_if', 'controls_if_if', 'controls_if_elseif', 'controls_if_else', 'controls_for',
-          //'controls_whileUntil', 'controls_flow_statements',
+          'controls_whileUntil', //'controls_flow_statements',
           //math
           'base_map','math_number','math_arithmetic',//'math_modulo',
           //logic
@@ -60,7 +60,9 @@
           //BTW
           'landing_gear_up','landing_gear_down',
           'rudder_left','rudder_right', 'rudder_set_position',
-          'navigation_lights', 'read_button',
+          'navigation_lights',
+          'read_button', 'pot',
+          'set_engine_speed', 'throttle',
           ];
       for (var x = 0; x < keepers.length; x++) {
         newLanguage[keepers[x]] = Blockly.Language[keepers[x]];
