--- a/blockly/apps/blocklyduino/index.html
+++ b/blockly/apps/blocklyduino/index.html
@@ -270,7 +270,7 @@ function init(blockly) {
               <button onclick="save()">Save XML</button>
               <button id="fakeload">Load XML</button>
               <input type="file" id="load" style="display: none;"/>
-              <button class="launch" onclick="displaySketchInAlert()">Run Program</button>
+              <!--button class="launch" onclick="sendSketchToApplet()">Run Program</button-->
             </td>
           </tr>
         </table>
