--- a/blockly/apps/blocklyduino/frame.html
+++ b/blockly/apps/blocklyduino/frame.html
@@ -63,6 +63,7 @@
           'navigation_lights',
           'read_button', 'pot',
           'set_engine_speed', 'throttle',
+          'wait',
           ];
       for (var x = 0; x < keepers.length; x++) {
         newLanguage[keepers[x]] = Blockly.Language[keepers[x]];
