Removed landing gear from menu.

--- a/blockly/apps/blocklyduino/frame.html
+++ b/blockly/apps/blocklyduino/frame.html
@@ -58,7 +58,7 @@
           //variable
           'variables_get','variables_set', 'variables_declare',
           //BTW
-          'landing_gear_up','landing_gear_down',
+          //'landing_gear_up','landing_gear_down',
           'rudder_left','rudder_right', 'rudder_set_position',
           'navigation_lights',
           'read_button', 'pot',
