Small correction of buttons text. Further removal of old js code for other programming languages.

--- a/blockly/apps/blocklyduino/frame.html
+++ b/blockly/apps/blocklyduino/frame.html
@@ -1,23 +1,23 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Blockly Demo: Code</title>
+  <title>BlocklyDuino for Behind the Wire</title>
   <script type="text/javascript" src="../blockly_compressed.js"></script>
   <script type="text/javascript" src="../../generators/arduino.js"></script>
   <script type="text/javascript" src="../../generators/arduino/control.js"></script>
+  <script type="text/javascript" src="../../generators/arduino/lists.js"></script>
   <script type="text/javascript" src="../../generators/arduino/logic.js"></script>
   <script type="text/javascript" src="../../generators/arduino/math.js"></script>
-  <script type="text/javascript" src="../../generators/arduino/text.js"></script>
-  <script type="text/javascript" src="../../generators/arduino/lists.js"></script>
-  <script type="text/javascript" src="../../generators/arduino/variables.js"></script>
   <script type="text/javascript" src="../../generators/arduino/procedures.js"></script>
+  <script type="text/javascript" src="../../generators/arduino/text.js"></script>
+  <script type="text/javascript" src="../../generators/arduino/variables.js"></script>
   <script type="text/javascript" src="../../language/en/_messages.js"></script>
   <script type="text/javascript" src="../../language/common/control.js"></script>
   <script type="text/javascript" src="../../language/common/logic.js"></script>
   <script type="text/javascript" src="../../language/common/math.js"></script>
   <script type="text/javascript" src="../../language/common/text.js"></script>
   <script type="text/javascript" src="../../language/common/lists.js"></script>
-  <!--script type="text/javascript" src="../../language/common/variables.js"></script-->
+  <script type="text/javascript" src="../../language/common/variables.js"></script>
   <script type="text/javascript" src="../../language/common/procedures.js"></script>
   <!-- define blocks -->
   <script type="text/javascript" src="../../generators/arduino/base.js"></script>
@@ -50,7 +50,7 @@
           'serial_print', 'inout_buildin_led',
           //control
           'base_delay', 'controls_if', 'controls_if_if', 'controls_if_elseif', 'controls_if_else', 'controls_for',
-          'controls_whileUntil', //'controls_flow_statements',
+          'controls_whileUntil', 'controls_flow_statements',
           //math
           'base_map','math_number','math_arithmetic',//'math_modulo',
           //logic
