--- a/blockly/apps/blocklyduino/index.html
+++ b/blockly/apps/blocklyduino/index.html
@@ -1,36 +1,12 @@
 <html manifest=node.manifest>
 <head>
   <meta charset="utf-8">
-  <title>Blockly Demo: Arduino</title>
-  <!--script type="text/javascript" src="../blockly_compressed.js"></script-->
+  <title>BlocklyDuino for Behind the Wire</title>
   <script type="text/javascript" src="Blob.js"></script>
   <script type="text/javascript" src="FileSaver.min.js"></script>
   <script type="text/javascript" src="blockly_helper.js"></script>
   <script type="text/javascript" src="../loadsketch/ArduAplet.js"></script>
   <script>
-  // Whitelist of blocks to keep.
-  /*var newLanguage = {}
-  var keepers = ['controls_loop', 'controls_delay', 'control_map',
-      //'setup_pinmode', 'output_digital_write', 'output_analog_write',
-      //'controls_if', 'controls_if_if', 'controls_if_elseif',
-      //'controls_if_else', 'controls_whileUntil', 'controls_for',
-      //'controls_flow_statements',
-      //'math_number','math_arithmetic',//'math_modulo',
-      //'logic_compare', 'logic_operation', 'logic_negate', 'logic_boolean',
-      //'variables_get','variables_set',
-      //'procedures_defnoreturn', 'procedures_defreturn', 'procedures_callnoreturn', 'procedures_callreturn'
-      ];
-  for (var x = 0; x < keepers.length; x++) {
-    newLanguage[keepers[x]] = Blockly.Language[keepers[x]];
-  }
-  // Fold control category into logic category.
-  for (var name in newLanguage) {
-    if (newLanguage[name].category == 'Math') {
-      newLanguage[name].category = 'Logic';
-    }
-  }
-  Blockly.Language = newLanguage;*/
-  
 /**
  * List of tab names.
  * @private
@@ -96,12 +72,6 @@ function renderContent() {
     var xmlText = Blockly.Xml.domToPrettyText(xmlDom);
     xmlTextarea.value = xmlText;
     xmlTextarea.focus();
-  /*} else if (content.id == 'content_javascript') {
-    content.innerHTML = Blockly.Generator.workspaceToCode('JavaScript');
-  } else if (content.id == 'content_dart') {
-    content.innerHTML = Blockly.Generator.workspaceToCode('Dart');
-  } else if (content.id == 'content_python') {
-    content.innerHTML = Blockly.Generator.workspaceToCode('Python');*/
   } else if (content.id == 'content_arduino') {
     //content.innerHTML = Blockly.Generator.workspaceToCode('Arduino');
     var arduinoTextarea = document.getElementById('textarea_arduino');
@@ -270,7 +240,7 @@ function init(blockly) {
               <button onclick="save()">Save XML</button>
               <button id="fakeload">Load XML</button>
               <input type="file" id="load" style="display: none;"/>
-              <!--button class="launch" onclick="sendSketchToApplet()">Run Program</button-->
+              <!--button class="launch" onclick="pythonTest()">Run Program</button-->
             </td>
           </tr>
         </table>
