--- a/blockly/apps/loadsketch/test.html
+++ b/blockly/apps/loadsketch/test.html
@@ -23,7 +23,7 @@
 
 <body>
 
-   <p>This is the html file in the gitdevelop blocky html-js folder</p>
+   <p>This is the html file in the "blockly\apps\loadsketch" directory.</p>
 
    <textarea rows="10" cols="500" name="sketchCode" id="sketchTextArea">
 int led = 13; //from html
