--- a/blockly/apps/blocklyduino/index.html
+++ b/blockly/apps/blocklyduino/index.html
@@ -46,7 +46,7 @@
       // Deselect the checkbox
       var peak_code_checkbox = document.getElementById('peakArduinoCheck');
       peak_code_checkbox.checked = false;
-      peakArduinoCode();
+      attachArduinoCode();
       
       // Deselect all tabs and hide all panes.
       for (var x in TABS_) {
@@ -88,10 +88,22 @@
     
     /**
      * Updates the arduino code in the text area based on the blocks
+     * TODO: Need to get get this working correctly in Chrome
      */
-    function renderArduinoCode() {
+    function renderArduinoCodeStart(e) {
+      //console.log('handleDragStart');
+      if(e !== null) {
+        //e.dataTransfer = e.originalEvent.dataTransfer;
+        e.dataTransfer.setData('text/html', 'This text may be dragged');
+      }
+    }
+    function renderArduinoCode(e) {
+      //console.log('Other code');
       var arduinoTextarea = document.getElementById('textarea_arduino');
       arduinoTextarea.value = Blockly.Generator.workspaceToCode('Arduino');
+      if(e !== null) {
+        e.preventDefault();
+      }
     }
 
     /**
@@ -131,7 +143,7 @@
      * Configure the Block panel to display the code on the right based on the state
      * of the checkbox "peakArduinoCheck"
      */
-    function peakArduinoCode() {
+    function attachArduinoCode() {
       var ardu_div = document.getElementById('content_arduino');
       var block_div = document.getElementById('content_blocks');
       var peak_code_checkbox = document.getElementById('peakArduinoCheck');
@@ -155,13 +167,27 @@
         block_div.className = 'content_block_peak';
 
         // Regenerate arduino code and ensure every click does as well
-        renderArduinoCode();
-        blocks_iframe.contentDocument.addEventListener('click', renderArduinoCode, false)
+        // TODO: not quite working in Chrome
+        renderArduinoCode(null);
+        blocks_iframe.contentDocument.addEventListener('click', renderArduinoCode, false);
+        blocks_iframe.contentDocument.addEventListener('dragstart', renderArduinoCodeStart, false);
+        blocks_iframe.contentDocument.addEventListener('dragend', renderArduinoCode, false);
+        blocks_iframe.contentDocument.addEventListener('dragover', renderArduinoCode, false);
+        blocks_iframe.contentDocument.addEventListener('dragleave', renderArduinoCode, false);
+        blocks_iframe.contentDocument.addEventListener('drop', renderArduinoCode, false);
+        blocks_iframe.contentDocument.addEventListener('dragenter', renderArduinoCode, false);
       } else {
         // Restore to original state
+        // TODO: not quite working in Chrome
         block_div.className = 'content_block';
         ardu_div.className = 'content_arduino';
-        blocks_iframe.contentDocument.removeEventListener('click', renderArduinoCode, false)
+        blocks_iframe.contentDocument.removeEventListener('click', renderArduinoCode, false);
+        blocks_iframe.contentDocument.removeEventListener('dragstart', renderArduinoCodeStart, false);
+        blocks_iframe.contentDocument.removeEventListener('dragend', renderArduinoCode, false);
+        blocks_iframe.contentDocument.removeEventListener('dragover', renderArduinoCode, false);
+        blocks_iframe.contentDocument.removeEventListener('dragleave', renderArduinoCode, false);
+        blocks_iframe.contentDocument.removeEventListener('drop', renderArduinoCode, false);
+        blocks_iframe.contentDocument.removeEventListener('dragenter', renderArduinoCode, false);
 
         // Deselect all tabs and panels
         for (var x in TABS_) {
@@ -194,8 +220,8 @@
             <td id="tab_xml" class="taboff" onclick="tabClick(this.id)">XML</td>
             <td class="tabmax">
               <!--applet code=ArduinoAppletPackage.ArduinoApplet.class archive="../loadsketch/ArduinoApplet.jar" name="ArduApplet" id ="ArduApplet" width="500" height="75"> </applet-->
-              Blocks+Code<input type="checkbox" name="peakCode" id="peakArduinoCheck" value="peakArduinoCode" onclick="peakArduinoCode()"/>
-              <button onclick="renderArduinoCode()">Render</button>
+              Blocks+Code<input type="checkbox" name="peakCode" id="peakArduinoCheck" value="peakArduinoCode" onclick="attachArduinoCode()"/>
+              <button onclick="renderArduinoCode(null)">Render</button>
               <button onclick="discard()">Discard</button>
               <button onclick="save()">Save XML</button>
               <button id="fakeload">Load XML</button>
@@ -209,7 +235,7 @@
     </tr>
     <tr>
       <td height="99%">
-        <div id="content_blocks" onclick="renderArduinoCode()" >
+        <div id="content_blocks" onclick="attachArduinoCode()">
           <iframe id="iframe_blocks" src="frame.html"></iframe>
         </div>
         <div id="content_arduino">
