Dual view code div now scrolls correctly in Firefox. Issue #4 from the tracker identified an issue occurring in Firefox, where if the dual view mode is selected (Click on "peek at code" when the blocks tab is active). This update fixes that issue, tested in Firefox 30.0, Chrome 35 and IE 11.
In addition the css file for the BlocklyDuino web app has been moved (and updated) from the media folder to the apps/blockyduino folder. This is because the media is a shared folder for different Blockly apps, and this specific css file is only relevant for the code webapp.

Fixes #4

--- a/blockly/apps/blocklyduino/index.html
+++ b/blockly/apps/blocklyduino/index.html
@@ -3,7 +3,7 @@
   <meta charset="utf-8">
   <title>BlocklyDuino for Behind the Wire</title>
   <link rel="icon" type="image/png" href="../../media/favicon/favicon.png">
-  <link rel="stylesheet" type="text/css" href="../../media/webfrontend.css">
+  <link rel="stylesheet" type="text/css" href="blockyduino.css">
   <link rel="stylesheet" type="text/css" href="prism/prism.css">
   <script type="text/javascript" src="prism/prism.js"></script>
   <script type="text/javascript" src="Blob.js"></script>
@@ -241,13 +241,13 @@
         </table>
       </td>
     </tr>
-    <tr>
-      <td height="100%" style="background:#eee;">
-        <div id="content_blocks">
+    <tr >
+      <td height="99%" style="background:#eee;position:relative;">
+        <div id="content_blocks" class="content_block">
           <iframe id="iframe_blocks" src="frame.html"></iframe>
         </div>
-        <div id="arduino_code_peek" class="arduino_code_peek">
-          <pre id="arduino_pre" class="language-cpp"><code id="arduino_code" class="language-cpp">code goes here</code></pre>
+        <div id="arduino_code_peek">
+          <pre id="arduino_pre"><code id="arduino_code" class="language-cpp">code goes here</code></pre>
         </div>
         <div id="content_arduino">
           <textarea id="textarea_arduino" wrap="off" readonly></textarea>
