Added arduino code specif syntax highlighting. Colours are not final and can be edited in the prism.css file.

--- a/blockly/apps/blocklyduino/index.html
+++ b/blockly/apps/blocklyduino/index.html
@@ -247,7 +247,7 @@
           <iframe id="iframe_blocks" src="frame.html"></iframe>
         </div>
         <div id="arduino_code_peek">
-          <pre id="arduino_pre"><code id="arduino_code" class="language-cpp">code goes here</code></pre>
+          <pre id="arduino_pre"><code id="arduino_code" class="language-arduino">code goes here</code></pre>
         </div>
         <div id="content_arduino">
           <textarea id="textarea_arduino" wrap="off" readonly></textarea>
