Minor updates to the BlocklyRequestHandler and ServerCompilerSettings.py

--- a/blockly/apps/loadsketch/ArduServerCompilerSettings.html
+++ b/blockly/apps/loadsketch/ArduServerCompilerSettings.html
@@ -16,18 +16,18 @@
 
    <div class="settings_div">
       Arduino Board:
-      <select name="cars">
-         <option value="uno">Arduino Uno</option>
-         <option value="leonardo">Arduino Leonardo</option>
-         <option value="mega">Arduino Mega</option>
-         <option value="duemilanove">Arduino Duemilanove ATmega328p</option>
-         <option value="duemilanove168">Arduino Duemilanove ATmega168</option>
+      <select name="board">
+         <option value="uno">Uno</option>
+         <option value="leonardo">Leonardo</option>
+         <option value="mega">Mega</option>
+         <option value="duemilanove">Duemilanove_ATmega328p</option>
+         <option value="duemilanove168">Duemilanove_ATmega168</option>
       </select>
    </div>
 
    <div class="settings_div">
       COM Port:
-      <select name="cars">
+      <select name="com_port">
          <option value="COM1">COM 1</option>
          <option value="COM2">COM 2</option>
          <option value="COM3">COM 3</option>
